# Clifford4-pytorch

./: README.md  README1.md  Readme.md  benchmark_clifford4.py  benchmark_clifford4_v0_2_1.py  clifford_algebra_pytorch_cl4_v0.1.1.py  clifford_algebra_pytorch_cl4_v0.2.0.py  pyproject.toml  requirements.txt  test_clifford4_v0_2_1.py
src/: README.md
src/clifford4_core/: __init__.py  core.py
src41/: clifford41_conformal.py  clifford41_conformal.py.old  test_clifford41_grammar_molecule_v0.1.0.py  test_clifford41_vs_original.py
tests/: test_clifford4.py
